# glyph-forge-client

./: .buildinfo  .gitignore  .gitmodules  DOCX_CLEANER_FIX.md  README.md  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  search.html  searchindex.js  test_integration.py
.github/workflows/: docs.yml  release.yml
_modules/: index.html
_modules/glyph_forge/core/client/: exceptions.html  forge_client.html
_sources/: license.rst.txt
_sources/api/: workspace.rst.txt
_sources/user_guide/: quickstart.rst.txt
api/: client.html  exceptions.html  workspace.html
docs/: PACKAGING.md  VERSIONING.md  stripe_integration_plan.md
docs_sphinx/: Makefile
docs_sphinx/.github/workflows/: docs.yml
docs_sphinx/docs_sphinx/source/examples/: advanced.rst  basic_usage.rst  bulk_processing.rst  compression.rst
docs_sphinx/source/: conf.py  index.rst
docs_sphinx/source/_static/: custom.css
docs_sphinx/source/api/: client.rst  exceptions.rst
docs_sphinx/source/user_guide/: authentication.rst  installation.rst  workspace.rst
examples/scripts/: build_and_run_hello_world.py  build_and_run_resume1.py
examples/test_data/docx/: hello_world.docx  resume_1.docx
examples/test_data/docx/test_items/: test_header_footer.docx  test_header_footer_3_columns.docx  test_lists.docx  test_table_with_list.docx  test_themes_and_styles.docx
examples/test_data/plaintext/: resume_1.txt
scripts/: prepare_build.py
src/glyph_forge/: __init__.py
src/glyph_forge/core/client/: forge_client.py
src/glyph_forge/core/workspace/: bootstrap.py
src/glyph_forge/core/workspace/examples/: workspace_sample.py
src/glyph_forge/core/workspace/runtime/adapters/: local.py
tests/: __init__.py  conftest.py  health_check.py  test_cli.py  test_end_to_end.py  test_milestone1_integration.py
tests/client/: test_compress_schema.py  test_hello_world_styling.py
user_guide/: authentication.html  installation.html  quickstart.html  workspace.html
