[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "glyph-forge"
version = "0.1.0"
description = "A minimal glyph forge package"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Glyph Client License Agreement" }
authors = [{ name = "Devpro LLC" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/example/glyph-forge"
Repository = "https://github.com/example/glyph-forge"

[tool.hatch.build.targets.wheel]
packages = ["src/glyph_forge"]